[package]
name = "r3_kernel"
version = "0.0.1"
authors = ["Narasimha1997 <yogaimpression@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = {version = "0.10.9", path = "../third_party/crates/bootloader"}
spin = "0.5.2"
log = "0.4.13"
bit_field = "0.10.1"

[package.metadata.bootimage]
build-command = ["xbuild"]


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootloader]
map-physical-memory = true
