[package]
name = "r3_kernel"
version = "0.0.1"
authors = ["Narasimha1997 <yogaimpression@gmail.com>"]
edition = "2018"

[unstable]
build-std = ["core", "compiler_builtins", "alloc"]


[dependencies]
bootloader = {version = "0.10.9", path = "../third_party/crates/bootloader"}
linked_list_allocator = {version = "0.9.1", path = "../third_party/crates/linked-list-allocator"}
spin = "0.5.2"
log = "0.4.13"
bit_field = "0.10.1"
bitflags = "1.0.4"

[package.metadata.bootimage]
build-command = ["xbuild"]


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootloader]
map-physical-memory = true
physical-memory-offset = 0x0000_A000_0000_0000