[package]
name = "r3_kernel"
version = "0.0.1"
authors = ["Narasimha1997 <yogaimpression@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = {version = "0.10.9", path = "../third_party/crates/bootloader"}
linked_list_allocator = {version = "0.9.1", path = "../third_party/crates/linked-list-allocator"}
spin = "0.5.2"
log = "0.4.13"
bit_field = "0.10.1"
bitflags = "1.0.4"
object = { version = "0.27.1", default-features = false, features = ["read"] }
pc-keyboard={ path = "../third_party/crates/pc-keyboard" }
rand = { default-features = false, version = "0.8.4" }
rand_core = { default-features = false,  version = "0.6.3" }
rand_xoshiro = "0.6.0"

[package.metadata.bootimage]
build-command = ["xbuild"]


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootloader]
map-physical-memory = true
physical-memory-offset = 0x0000_D000_0000_0000
boot-info-address = 0x0000_C000_7000_0000
framebuffer-address = 0x0000_C000_8000_0000
kernel-stack-address = 0x0000_C000_C000_0000
kernel-stack-size = 2097152
# minimum-framebuffer-width = 600
# minimum-framebuffer-height = 600
